docker/es02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-v2.yml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: es02
  name: es02
  namespace: elasticsearch ##TO-DO: update this to dynamically update with variable from Terraform
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: es02
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose-v2.yml convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/openlxpxse_elastic: "true"
        io.kompose.service: es02
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: bootstrap.memory_lock
              value: "true"
            - name: cluster.initial_master_nodes
              value: es01,es02,es03
            - name: cluster.name
              value: es-docker-cluster
            - name: discovery.seed_hosts
              value: es01,es03
            - name: node.name
              value: es02
          image: docker.elastic.co/elasticsearch/elasticsearch:7.11.1
          name: es02
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: openlxpxse-data02
      restartPolicy: Always
      volumes:
        - name: openlxpxse-data02
          persistentVolumeClaim:
            claimName: openlxpxse-data02
status: {}
