docker/es01-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-v2.yml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: es01
  name: es01
  namespace: elasticsearch ##TO-DO: update this to dynamically update with variable from Terraform
spec:
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
  selector:
    io.kompose.service: es01
status:
  loadBalancer: {}
