docker/openlxpxse_elastic-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: openlxpxse_elastic
  namespace: elasticsearch ##TO-DO: update this to dynamically update with variable from Terraform
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/openlxpxse_elastic: "true"
  podSelector:
    matchLabels:
      io.kompose.network/openlxpxse_elastic: "true"
